--- a/style.css
+++ b/style.css
@@ -65,6 +65,16 @@ html, body {
   font-size: 4em;
   margin: 1rem;
 }
+.social a{
+  font-size: 4.5em;
+  padding: 3rem;
+}
+.fa-github{
+  color: #000;
+}
+.fa-linkedin{
+  color: #0077B5;
+}
 /*---Media Queries --*/
 @media (max-width: 992px) {
 
