--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 html, body {
   height : 100%;
   width: 100%;
-  font-family : 'Poppins', sans-serif;
+  font-family : 'Poppins', serif;
   color: #222;
 }
 .navbar {
@@ -101,6 +101,16 @@ html, body {
   padding: 5px;
   width:50%;
   height:100%;
+}
+.img-responsive{
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding:5px;
+  width: 150px;
+}
+.intro{
+  line-height: 1.75em;
+  font-size: 20pt;
 }
 /*---Media Queries --*/
 @media (max-width: 992px) {
