--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 
+html{
+  overflow-x: hidden;
+}
 html, body {
   height : 100%;
   width: 100%;
