--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ footer{
   padding: .8rem;
   border-bottom: 1px solid #d5d5d5
 }
+.colored
+{
+  color: #3B5998;
+}
 .nav-item{
   color: #0037FF
 }
@@ -117,6 +121,10 @@ footer{
     font-size: 4.25em;
     padding: 2.25rem;
   }
+  .navbar-brand h1
+  {
+    font-size: 150%;
+  }
 }
 @media(max-width: 768px) {
   .carousel-caption{
@@ -136,6 +144,10 @@ footer{
   .social a{
     font-size: 3.25em;
     padding: 1.5rem;
+  }
+  .navbar-brand h1
+  {
+    font-size: 100%;
   }
 }
 @media (max-width: 576px)
