--- a/style.css
+++ b/style.css
@@ -21,11 +21,8 @@ footer{
 {
   color: #3B5998;
 }
-.nav-item{
-  color: #0037FF
-}
 .nav-link{
-  font-size: 1.05em !important;
+  font-size: 1.15em !important;
 }
 .carousel-inner img{
   width: 100%;
@@ -149,6 +146,9 @@ footer{
   {
     font-size: 100%;
   }
+  .nav-link{
+    font-size: 1.10em !important;
+  }
 }
 @media (max-width: 576px)
 {
@@ -169,6 +169,9 @@ footer{
   .social a{
     font-size: 2.75em;
     padding: 1rem;
+  }
+  .nav-link{
+    font-size: 1.05em !important;
   }
 }
 @media (max-width: 400px)
