added github link button to modals

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ footer{
   padding-top : 2rem;
 }
 .welcome hr{
-  border-top: 2px solid #b4b4b4
+  border-top: 2px solid #b4b4b4;
   width: 95%;
   margin-top: .3rem;
   margin-bottom: 1rem;
