--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ footer{
   line-height: 1.75em;
   font-size: 20pt;
 }
-.modal-open,.btn:focus{
-  outline: none !important
+.modal-footer{
+  margin: auto;
 }
 @media(max-width: 992px)
 {
