--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html{
 html, body {
   height : 100%;
   width: 100%;
-  font-family : 'Poppins', serif;
+  font-family : 'Lato', sans-serif;
   color: #222;
   overflow-x: hidden;
 }
