--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 html{
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 html, body {
   height : 100%;
@@ -8,12 +9,14 @@ html, body {
   font-family : 'Lato', sans-serif;
   color: #222;
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 *:focus
 {
   outline: 0;
 }
 footer{
+  overflow-y: scroll;
   overflow-x: hidden;
 }
 .navbar {
