--- a/style.css
+++ b/style.css
@@ -6,20 +6,25 @@ html, body {
   color: #222;
   overflow-x: hidden;
   overflow-y: scroll;
-  --webkit-overflow-scrolling: touch;
 }
 *:focus
 {
   outline: 0;
 }
 footer{
-  --webkit-overflow-scrolling: touch;
   overflow-y: scroll;
   overflow-x: hidden;
+  padding-top: 2rem;
 }
 .navbar {
   padding: .8rem;
-  border-bottom: 1px solid #d5d5d5
+  border-bottom: 1px solid #d5d5d5;
+}
+.navbar .navbar-nav li a{
+  color: #696969!important;
+}
+.navbar .navbar-nav li a:hover, .navbar .navbar-nav li a.active{
+  color: #3B5998 !important;
 }
 .colored
 {
@@ -38,7 +43,7 @@ footer{
   transform:translateY(-50%);
 }
 .carousel-caption h1 {
-  font-size : 500%;
+  font-size : 600%;
   font-weight: 400;
   text-shadow: 1px 1px 15px #000;
 }
