--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ footer{
   border: 1px solid #ddd;
   border-radius: 4px;
   padding:5px;
-  width: 150px;
+  width: 50%;
 }
 .intro{
   line-height: 1.75em;
