--- a/style.css
+++ b/style.css
@@ -134,6 +134,10 @@ figcaption{
   line-height: 1.75em;
   font-size: 20pt;
 }
+body.modal-open{
+  position:fixed;
+  overflow: hidden;
+}
 .modal-img{
   display: block;
   margin-left: auto;
